colors change, homepage content update, logo atk14eshop

--- a/public/styles/_bootstrap_variables.scss
+++ b/public/styles/_bootstrap_variables.scss
@@ -38,12 +38,12 @@ $grays: map-merge(
   $grays
 );
 
-$blue:    #50b1ce !default;
+$blue:    #30bced;//#50b1ce !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #e83e8c !default;
 $red:     #dd403a !default;
-$orange:  #fd7e14 !default;
+$orange:  #fc5130;//#fd7e14 !default;
 $yellow:  #ffc107 !default;
 $green:   $brand-green !default;
 $teal:    #20c997 !default;
@@ -70,8 +70,8 @@ $colors: map-merge(
   $colors
 );
 
-$brand:         $brand-green;
-$primary:       $blue;//$green !default;
+$brand:         $blue;
+$primary:       $orange;//$green !default;
 $secondary:     $gray-600 !default;
 $success:       $green !default;
 $info:          $cyan !default;
