--- a/public/styles/_pagination.scss
+++ b/public/styles/_pagination.scss
@@ -66,7 +66,7 @@ Bootstrap`s own pagination scss should NOT be loaded.
 				}
 			}
 			
-			&.next-items, &.next-page {
+			&.next-page {
 				&:after {
 					margin-left: 0.5em;
 					font-family: "Font Awesome 5 Free";
@@ -76,7 +76,10 @@ Bootstrap`s own pagination scss should NOT be loaded.
 			}
 			
 			&.next-items {
-				&:after {
+				&:before {
+					margin-right: 0.5em;
+					font-family: "Font Awesome 5 Free";
+					font-weight: 900;
 					content: "\f067";
 				}
 			}
