--- a/public/styles/_filter.scss
+++ b/public/styles/_filter.scss
@@ -42,6 +42,7 @@
 		display: flex;
 		align-items: flex-start;
 		width: 100%;
+		flex-wrap: wrap;
 		
 		&__title {
 			flex-grow: 0;
@@ -53,7 +54,7 @@
 		}
 		&__items {
 			flex-grow: 100;
-			flex-shrink: 0;
+			flex-shrink: 10;
 		}
 		&__count {
 			flex-grow: 0;
