--- a/public/styles/_tables-cart.scss
+++ b/public/styles/_tables-cart.scss
@@ -530,277 +530,6 @@ table.table-products {
 
 
 
-
-
-//////////////////////////////////  obsolete
-
-
-table.table-cart-overview {
-	@include media-breakpoint-down(md){
-		display: block;
-		thead {
-			display: none;
-		}
-		tbody {
-			display: block;
-		
-			tr.cart-item {
-				display: grid;
-				grid-template-columns: 3fr 5fr 2fr;
-				grid-template-rows: auto auto auto;
-				grid-template-areas: "image name actions"
-														"image unitprice actions"
-														"quantity totalprice totalprice";
-				@include cart-border-normal;
-				td {
-					display: block;
-					border-bottom: none;
-					&.td-cart-item-image {
-						max-width: 100%;
-						grid-area: image;
-					}
-					&.td-cart-item-title {
-						grid-area: name;
-					}
-					&.td-cart-unit-price {
-						grid-area: unitprice;
-					}
-					&.td-cart-item-qty {
-						grid-area: quantity;
-					}
-					&.td-cart-item-price {
-						grid-area: totalprice;
-						display: flex;
-						align-items: center;
-						justify-content: flex-end;
-					}
-					&.td-cart-item-action {
-						grid-area: actions;
-						text-align: right;
-					}
-					
-					.table-hint-xs {
-						display: block;
-					}
-					
-				}
-			}
-		}
-		
-		tfoot {
-			display: block;
-			& > tr, & > tr > td {
-				display: block;
-			}
-			
-			tr.cart-discount-item {
-				display: grid;
-				grid-template-columns: 3fr 5fr 2fr;
-				grid-template-rows: auto auto auto;
-				grid-template-areas: "image title actions"
-														"image description totalprice";
-				@include cart-border-normal;
-				td {
-					border-bottom: none;
-					&.td-discount-icon {
-						grid-area: image;
-					}
-					&.td-discount-title {
-						grid-area: title;
-					}
-					&.td-discount-id {
-						grid-area: description;
-					}
-					&.td-cart-item-action {
-						text-align: right;
-						grid-area: actions;
-					}
-					&.td-cart-summary-totals {
-						align-self: end;
-						grid-area: totalprice;
-					}
-				}
-			}
-			
-			td.td-cart-redeem {
-				display: block;
-			}
-			
-			table.table-cart-summary {
-				width: 100%;
-				display: table;
-				table-layout: auto;
-				tbody {
-					display: table-row-group;
-				}
-				tr {
-					display: table-row;
-					th, td {
-						display: table-cell;
-					}
-				}
-			}			
-		}
-	}
-	@include media-breakpoint-down(xs){
-		margin-left: 0-$grid-gutter-width/2;
-		margin-right: 0-$grid-gutter-width/2;
-		width: auto;
-		tbody {
-			tr.cart-item {
-				grid-template-columns: 4fr 4fr 1fr;
-				grid-template-rows: auto auto auto auto;
-				grid-template-areas: "name name actions"
-														"image unitprice actions"
-														"quantity quantity quantity"
-														"totalprice totalprice totalprice";
-			}
-		}
-		
-		tfoot {
-			tr.cart-discount-item {
-				grid-template-columns: 1fr 7fr 2fr
-			}
-			
-			td.cart-redeem {
-				
-			}
-		}
-	}
-}
-
-
-table.table-order-summary {
-	
-	margin-bottom: $grid-gutter-width;
-	
-	p {
-		margin: 0;
-	}
-	
-	.icon-wrap {
-		color: $orange;
-	}
-	
-	& > tbody {
-		tr.cart-item {
-			td.td-cart-item-image {
-				max-width: 100%;
-				img.cart-item-image {
-					max-width: 100%;
-					height: auto;
-				}
-			}
-		}
-		@include cart-border-big;
-	}
-	& > tfoot {
-		& > tr {
-			& > th, & > td {
-				background-color: $cartTableBg;
-				@include cart-border-normal;
-			}
-			th {
-				font-weight: 600;
-			}
-		}
-	}
-	tr.cart-address {
-		th, td {
-			vertical-align: top;
-			.icon-wrap {
-				margin-right: 0.5rem;
-			}
-		}
-		ul.list-inline {
-			display: inline;
-		}
-	}
-	
-	@include media-breakpoint-down(md){
-		font-size: 0.875rem;
-		tr.cart-address {
-			td {
-				ul.list-inline, ul.list-separators {
-					display: inline-block;
-					vertical-align: top;
-					li.list-inline-item {
-						display: block;
-						padding: 0;
-						border-right: none;
-					}
-				}
-			}
-		}
-	}
-	
-	@include media-breakpoint-down(sm){
-		display: block;
-		& > thead {
-			display: none;
-		}
-		& > tbody, & > tfoot {
-			display: block;
-			& > tr {
-				display: block;
-				@include cart-border-normal;
-				& > td, & > th {
-					display: block;
-					border-bottom: none !important;
-					&:empty {
-						display: none;
-					}
-					.table-hint-xs {
-						display: block;
-					}
-				}
-			}
-			tr.cart-item {
-				display: grid;
-				grid-template-columns: 1fr 4fr 4fr;
-				grid-template-rows: auto auto auto;
-				grid-template-areas: "image title title"
-														"image unitprice quantity"
-														"totalprice totalprice totalprice";
-				td.td-cart-item-image {
-					grid-area: image;
-				}
-				td.td-cart-item-title {
-					grid-area: title;
-				}
-				td.td-cart-unit-price {
-					grid-area: unitprice;
-				}
-				td.td-cart-item-qty {
-					grid-area: quantity;
-				}
-				td.td-cart-item-price {
-					grid-area: totalprice;
-				}
-				
-			}
-		}
-		& > tfoot {
-			
-		}
-	}
-	
-	@include media-breakpoint-down(xs){
-		tbody {
-			tr.cart-item {
-				grid-template-columns: 4fr 4fr;
-				grid-template-rows: auto auto auto auto;
-				grid-template-areas: "image image"
-														"title title"
-														"unitprice quantity"
-														"totalprice totalprice";
-			}
-		}
-	}
-	
-}
-
-
 .checkout-summary__addresses {
 	padding-top: $grid-gutter-width;
 	padding-bottom: $grid-gutter-width;
@@ -809,6 +538,14 @@ table.table-order-summary {
 	@include cart-border-normal;
 	p:last-child {
 		margin-bottom: 0;
+	}
+	@include media-breakpoint-down(sm){
+		& > .row > div {
+			margin-bottom: $grid-gutter-width/2;
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
 	}
 }
 .form-group--id_note {
