navbar search display css fix

--- a/public/styles/_header.scss
+++ b/public/styles/_header.scss
@@ -158,6 +158,7 @@ ol.breadcrumb {
 	form.navbar-search {
 		order: 0;
 		padding-right: 1rem;
+		margin-bottom: 0;
 		input.form-control-sm {
 			border-radius: 0;
 			border: none;
