--- a/public/admin/styles/_layout.scss
+++ b/public/admin/styles/_layout.scss
@@ -7,8 +7,31 @@
 		flex-grow: 10;
 	}
 }
+
+.content-main {
+		padding-top: $grid-gutter-width/2;
+		padding-left: $grid-gutter-width/2;
+		padding-right: $grid-gutter-width/2;
+		padding-bottom: $grid-gutter-width;
+	}
+	@include media-breakpoint-up(lg){
+		.content-main {
+			padding-left: $grid-gutter-width;
+			padding-right: $grid-gutter-width;
+			padding-top: $grid-gutter-width;
+		}	
+	}
+	@media(min-width:1700px){
+		.content-main {
+			padding-left: $grid-gutter-width*2;
+			padding-right: $grid-gutter-width*2;
+			padding-top: $grid-gutter-width*1.5;
+		}	
+	}
+
+
 .has-nav-section {
-	.nav-section, .content-main {
+	.nav-section {
 		padding-top: $grid-gutter-width/2;
 	}
 	.nav-section {
@@ -29,25 +52,6 @@
 				}
 			}
 		}
-	}
-	.content-main {
-		padding-left: $grid-gutter-width/2;
-		padding-right: $grid-gutter-width/2;
-		padding-bottom: $grid-gutter-width;
-	}
-	@include media-breakpoint-up(lg){
-		.content-main {
-			padding-left: $grid-gutter-width;
-			padding-right: $grid-gutter-width;
-			padding-top: $grid-gutter-width;
-		}	
-	}
-	@media(min-width:1700px){
-		.content-main {
-			padding-left: $grid-gutter-width*2;
-			padding-right: $grid-gutter-width*2;
-			padding-top: $grid-gutter-width*1.5;
-		}	
 	}
 	
 	@include media-breakpoint-up(md){
