Back to top button in admin

--- a/public/admin/styles/application.scss
+++ b/public/admin/styles/application.scss
@@ -42,6 +42,8 @@
 
 @import "charts";
 
+@import "scroll-to-top";
+
 @import "shared/clearfix";
 @import "shared/loading";
 @import "shared/btn_default";
