--- a/public/styles/_list-categories.scss
+++ b/public/styles/_list-categories.scss
@@ -95,17 +95,23 @@ ul.list--tree {
 
 
 ul.list--categories {
-	&--columns {
-		@include media-breakpoint-up(sm) {
-			column-count: 2;
+	@include media-breakpoint-up(sm) {
+		display: flex;
+		flex-wrap: wrap;
+		.list-item {
+			flex-basis: 50%;
+			&:nth-last-child(1), &:nth-last-child(2) {
+				margin-bottom: 0;
+			}
 		}
-		
-		@include media-breakpoint-up(md) {
-			column-count: 3;
-		}
-		
-		@include media-breakpoint-up(xl) {
-			column-count: 4;
+	}
+
+	@include media-breakpoint-up(lg) {
+		.list-item {
+			flex-basis: percentage(1/3);
+			&:nth-last-child(1), &:nth-last-child(2), &:nth-last-child(3) {
+				margin-bottom: 0;
+			} 
 		}
 	}
 	.list-item {
@@ -119,6 +125,7 @@ ul.list--categories {
 					flex-grow: 0;
 				}
 				&__text {
+					padding-right: 0.5rem;
 					&__title {
 						font-weight: 600;
 						font-size: inherit;
@@ -135,6 +142,26 @@ ul.list--categories {
 						color: $body-color;
 						margin: 0;
 						font-size: 0.875rem;
+					}
+				}
+			}
+		}
+	}
+	
+	// larger bottom space if (some) items have teasers
+	&--teasers {
+		.list-item {
+			margin-bottom: 1rem;
+		}
+	}
+	// vertically centered text if (some) items have images but no teaser
+	&--images:not(.list--categories--teasers){
+		.list-item {
+			a {
+				height: 100%;
+				.child-category {
+					&__text {
+						align-self: center;
 					}
 				}
 			}
