--- a/public/styles/_header.scss
+++ b/public/styles/_header.scss
@@ -275,6 +275,7 @@ ol.breadcrumb {
 			}
 			.dropdown-menu {
 				margin-top: 0;
+				min-width: 100%;
 				background-color: rgba( desaturate( lighten( $brand, 3% ), 5% ),0.98 );
 				@supports(backdrop-filter: blur(5px)){
 					background-color: rgba($brand,0.9);
