--- a/public/styles/_stores.scss
+++ b/public/styles/_stores.scss
@@ -45,7 +45,7 @@
 		padding-top: 45%;
 		min-height: 300px;
 		background-color: beige;
-		margin-bottom: $grid-gutter-width/2;
+		margin-bottom: $grid-gutter-width;
 	}
 	
 }
@@ -69,6 +69,23 @@
 	}
 }
 
+.stores-filter {
+	margin-bottom: $grid-gutter-width/2;
+	margin-top: 0 - $grid-gutter-width/2;
+	input.form-control {
+		&:focus {
+			box-shadow: none;
+		}
+		@include media-breakpoint-only(xs){
+			width: calc(100% - 90px);
+		}
+	}
+	@include media-breakpoint-only(xs){
+		flex-wrap: nowrap;
+		justify-content: space-between;
+	}
+}
+
 // Karta na mape
 .map-info-popup, .smap .card {
 	$cardHeight: 140px;
@@ -81,6 +98,7 @@
 	background-color: white;
 	box-shadow: 2px 2px 20px 0px rgba(0,0,0,0.6) !important;
 	border: none !important;
+	margin-bottom: 16px;
 	.card-header {
 		display: block;
 		flex-basis: $cardHeight;
