--- a/public/styles/shared/frontend-styles.scss
+++ b/public/styles/shared/frontend-styles.scss
@@ -1,6 +1,7 @@
 // Styles from frontend available in admin.
 
 @import "node_modules/bootstrap/scss/functions";
+@import "./public/styles/application_variables";
 @import "./public/styles/bootstrap_variables";
 
 // Frontend colors
