Styling digital products download.

--- a/public/styles/application.scss
+++ b/public/styles/application.scss
@@ -25,6 +25,8 @@
 
 @import "alerts";
 
+@import "typography";
+
 @import "admin-object-menu";
 
 @import "content_header";
@@ -86,6 +88,8 @@
 @import "search_results";
 
 @import "filter";
+
+@import "digital_contents";
 
 @import "shared/clearfix";
 @import "shared/loading";
