Basic styling and JS for styleguides

--- a/public/styles/application.scss
+++ b/public/styles/application.scss
@@ -101,6 +101,8 @@
 @import "shared/fileicons";
 @import "shared/colors";
 
+@import "styleguides";
+
 @import "print";
 
 //@import "img_colors_preview";
