--- a/public/styles/_css_vars.scss
+++ b/public/styles/_css_vars.scss
@@ -10,7 +10,7 @@
 	@each $color, $value in $grays {
 		--gray-#{$color}: #{$value};
 	}
-	//selected other colors
+	//selected other colors and properties
 	--link-color: #{$link-color};
 	--link-hover-color: #{$link-hover-color};
 	--body-color: #{$body-color};
