Custom error pages finalized

--- a/config/error_pages/error500.phtml
+++ b/config/error_pages/error500.phtml
@@ -80,8 +80,8 @@
 				<h1><i class="fas fa-exclamation-triangle"></i> Internal Server Error</h1>
 				<p>An internal server error occured.</p>
 				<hr>
-				<h2><i class="fas fa-wrench"></i> Some other info</h2>
-				<p>Normcore tbh succulents, shaman ennui put a bird on it roof party mixtape la croix pinterest. Small batch occupy godard shabby chic roof party listicle. Succulents migas bespoke, prism echo park butcher cardigan man braid hell of. Tacos fingerstache organic, celiac biodiesel retro master cleanse tumblr jean shorts aesthetic vegan yuccie keffiyeh humblebrag gastropub.</p>
+				<h2><i class="fas fa-wrench"></i> Vnitřní chyba systému</h2>
+				<p>Došlo k vnitřní chybě systému. Chyba byla zaznamenána a bude opravena. Opakujte prosím váš požadavek později.</p>
 			</div>
 			<div class="col-image">
 				<img src="/public/dist/images/error_500.jpg" alt="Internal Server Error" class="img-fluid">
