--- a/config/error_pages/error503.phtml
+++ b/config/error_pages/error503.phtml
@@ -87,8 +87,8 @@
 				<h1><i class="fas fa-exclamation-triangle"></i> Service Unavailable</h1>
 				<p>This site is in maintenance. Please come back later</p>
 				<hr>
-				<h2><i class="far fa-clock"></i> Some other info</h2>
-				<p>Normcore tbh succulents, shaman ennui put a bird on it roof party mixtape la croix pinterest. Small batch occupy godard shabby chic roof party listicle. Succulents migas bespoke, prism echo park butcher cardigan man braid hell of. Tacos fingerstache organic, celiac biodiesel retro master cleanse tumblr jean shorts aesthetic vegan yuccie keffiyeh humblebrag gastropub.</p>
+				<h2><i class="far fa-clock"></i> Tento e-shop je dočasně mimo provoz</h2>
+				<p>Probíhá plánovaná údržba systému. Vraťte se prosím později.</p>
 			</div>
 			<div class="col-image">
 				<img src="/public/dist/images/error_backsoon_narrow.jpg" alt="Service Unavailable" class="img-fluid">
