--- a/public/styles/_md_book.scss
+++ b/public/styles/_md_book.scss
@@ -8,6 +8,13 @@
 			//border-left: 1px solid $border-color;
 		}		
 	}
+	
+	@include media-breakpoint-down(sm){
+		.row {
+			display: block;
+		}
+	}
+	
 	.nav-pills {
 		position: sticky;
 		top: 0;
