Better message on Internal Server Error page

--- a/config/error_pages/error500.phtml
+++ b/config/error_pages/error500.phtml
@@ -81,7 +81,7 @@
 				<p>An internal server error occured.</p>
 				<hr>
 				<h2><i class="fas fa-wrench"></i> Vnitřní chyba systému</h2>
-				<p>Došlo k vnitřní chybě systému. Chyba byla zaznamenána a bude opravena. Opakujte prosím váš požadavek později.</p>
+				<p>Na našem serveru došlo k chybě. Na jejím odstranění už pracujeme. Zkuste se vrátit za pár minut.</p>
 			</div>
 			<div class="col-image">
 				<img src="/public/dist/images/error_500.jpg" alt="Internal Server Error" class="img-fluid">
