Added shopping cart modals to styleguides

--- a/public/styles/_typography.scss
+++ b/public/styles/_typography.scss
@@ -1,3 +1,12 @@
 .invisible-space {
 	font-size: 0;
 }
+
+.nowrap {
+	white-space: nowrap;
+}
+
+.text-xl {
+	font-size: 2rem;
+	margin-bottom: 1em;
+}
