--- a/public/styles/application.scss
+++ b/public/styles/application.scss
@@ -100,6 +100,7 @@
 @import "shared/js_utils";
 @import "shared/fileicons";
 @import "shared/colors";
+@import "shared/color_radio_checkbox";
 
 @import "styleguides";
 @import "md_book";
