--- a/public/styles/shared/_color_radio_checkbox.scss
+++ b/public/styles/shared/_color_radio_checkbox.scss
@@ -26,6 +26,10 @@
 			background-color: rgba(white,0.8);
 		}
 		
+		a {
+			color: inherit;
+		}
+		
 	}
 	
 	.custom-control-input:checked ~ .custom-control-label::before, .custom-control-input:indeterminate~.custom-control-label:before {
