--- a/public/styles/shared/frontend-styles.scss
+++ b/public/styles/shared/frontend-styles.scss
@@ -10,10 +10,25 @@
 	.frontend-bg-#{$color} {
 		background-color: $value !important;
 	}
+	.frontend-text-contrast-#{$color} {
+		color: color-yiq( $value );
+	}
 }
 
 @each $color, $value in $theme-colors {
 	.frontend-bg-#{$color} {
 		background-color: $value !important;
+	}
+	.frontend-text-contrast-#{$color} {
+		color: color-yiq( $value );
+	}
+}
+
+@each $color, $value in $grays {
+	.frontend-bg-gray-#{$color} {
+		background-color: $value !important;
+	}
+	.frontend-text-contrast-gray-#{$color} {
+		color: color-yiq( $value );
 	}
 }
