--- a/public/styles/_stores.scss
+++ b/public/styles/_stores.scss
@@ -56,6 +56,7 @@
 	height: 25vw;
 	min-height: 300px;
 	margin-bottom: $grid-gutter-width;
+	position: relative;
 	.cluster {
 		div {
 			border: none !important;
@@ -66,6 +67,20 @@
 				display: none;
 			}
 		}
+	}
+	.preloader {
+		position: absolute;
+		background-color: $gray-200;
+		z-index: 0;
+		width: 100%;
+		height: 100%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		.spinner-border {
+			margin-right: 1em;
+		}
+		color: $gray-600;
 	}
 }
 
