Added logo grid template, added logo grid link list to homepage

--- a/public/styles/application.scss
+++ b/public/styles/application.scss
@@ -95,6 +95,8 @@
 
 @import "digital_contents";
 
+@import "logo_grid";
+
 @import "shared/clearfix";
 @import "shared/loading";
 @import "shared/btn_default";
