--- a/public/styles/application.scss
+++ b/public/styles/application.scss
@@ -97,6 +97,8 @@
 
 @import "logo_grid";
 
+@import "langswitch";
+
 @import "shared/clearfix";
 @import "shared/loading";
 @import "shared/btn_default";
