--- a/public/styles/_content_header.scss
+++ b/public/styles/_content_header.scss
@@ -14,6 +14,28 @@ header.content-header, .content-header {
 			flex-basis: 100% - percentage($max-content-width/($max-page-width - (2 * $grid-gutter-width)));
 			flex-grow: 0;
 		}
+		&--logo {
+			padding-bottom: $grid-gutter-width;
+			text-align: right;
+			justify-content: flex-end;
+			flex-basis: 33%;
+			flex-basis: 100% - percentage($max-content-width/($max-page-width - (2 * $grid-gutter-width)));
+			
+			&.content-header__image--portrait {
+				img {
+					max-height: 400px;
+					width: auto;
+				}
+				@include media-breakpoint-down(sm){
+					text-align: left;
+					justify-content: flex-start;
+					img {
+						max-height: 300px;
+						width: auto;
+					}
+				}
+			}
+		}
 	}
 	.content-header__text {
 		margin-bottom: $grid-gutter-width;
