--- a/public/styles/_cards.scss
+++ b/public/styles/_cards.scss
@@ -40,6 +40,21 @@ $card-border-style: 1px dashed $border-color;
 		height: auto;
 	}
 	
+	// If image is logo it should be wraped in .card__logo to have nice padding;
+	// Padding is added by inline styles
+	.card__logo {
+		position: relative;
+		padding-top: 100%;
+		background-color: white;
+		&__wrap {
+			position: absolute;
+			left: 0;
+			top: 0;
+			width: 100%;
+			height: 100%;
+		}
+	}
+	
 	.card-title {
 		font-size: 1rem;
 		flex-grow: 8;
