--- a/public/styles/application.scss
+++ b/public/styles/application.scss
@@ -99,6 +99,8 @@
 
 @import "langswitch";
 
+@import "searchbar";
+
 @import "shared/clearfix";
 @import "shared/loading";
 @import "shared/btn_default";
