--- a/public/styles/_searchbar.scss
+++ b/public/styles/_searchbar.scss
@@ -27,6 +27,27 @@
 		color: inherit;
 	}
 	
+	&__basket {
+		//background-color: rgba(aqua, 0.15);
+		&--outline {
+			a {
+				display: inline-block;
+				background-color: $gray-100;
+				background-color: rgba(white, 0.5);
+				border: 1px solid $border-color;
+				padding: calc(#{$input-btn-padding-y-lg} + 0.125rem) $input-btn-padding-x-lg;
+				line-height: $input-btn-line-height-lg;
+				transition: background-color 0.25s;
+				&:hover {
+					background-color: $secondary;
+					color: white;
+					text-decoration: none;
+					transition: background-color 0.1s;
+				}
+			}
+		}
+	}
+	
 	form {
 		//outline: 1px dotted red;
 		flex-grow: 10;
