--- a/public/styles/_header.scss
+++ b/public/styles/_header.scss
@@ -14,6 +14,9 @@ $mainbar_controls_breakpoint_lower: sm;
 
 ol.breadcrumb {
 	border-bottom: 1px solid $border-color;
+	@include media-breakpoint-down($navbar_breakpoint_lower){
+		margin-top: $grid-gutter-width/2;
+	}
 }
 
 .header-main {
@@ -29,26 +32,6 @@ ol.breadcrumb {
 		margin-bottom: 0;
 	}
 	
-	.cart-num-items {
-		$size: 1.25rem; 
-		display: inline-flex;
-		justify-content: center;
-		align-items: center;
-		min-width: $size;
-		height: $size;
-		border-radius: $size/2;
-		background-color: $primary;
-		line-height: 1;
-		color: color-yiq($primary);
-		text-align: center;
-		padding: 0 $size/4;
-		font-size: 0.875rem;
-		font-weight: bold;
-		animation: cart-indicator-animation;
-		animation-duration: 0.5s;
-		animation-iteration-count: 1;
-	}
-
 	// Top navbar, also mobile menu
 	.nav-top {
 		padding-top: 0;
@@ -408,4 +391,24 @@ ol.breadcrumb {
 		}
 
 	}
+}
+
+.cart-num-items {
+	$size: 1.25rem; 
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	min-width: $size;
+	height: $size;
+	border-radius: $size/2;
+	background-color: $primary;
+	line-height: 1;
+	color: color-yiq($primary);
+	text-align: center;
+	padding: 0 $size/4;
+	font-size: 0.875rem;
+	font-weight: bold;
+	animation: cart-indicator-animation;
+	animation-duration: 0.5s;
+	animation-iteration-count: 1;
 }
